--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ SEMAPHORECI_API_TAKEN=duWE4Hs9EV4a9y9xeoha
 
 ## For local dev
 # APP_DB_HOST=0.0.0.0
+# APP_DB_PORT=5432
 # APP_DB_NAME=postgres
 # APP_DB_USERNAME=postgres
 # APP_DB_PASSWORD=In!ferno666
@@ -10,6 +11,7 @@ SEMAPHORECI_API_TAKEN=duWE4Hs9EV4a9y9xeoha
 # APP_DB_HOST=/cloudsql/414115:europe-west2:golang-psql
 # INSTANCE_CONNECTION_NAME=gmcd-414115:europe-west2:golang-psql
 APP_DB_HOST=35.242.149.106
+APP_DB_PORT=5432
 APP_DB_NAME=golang-db
 APP_DB_USERNAME=golang-user
 APP_DB_PASSWORD=Noddy.Pass
