--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -2,8 +2,8 @@
 name: "Hello World"
 description: "Greet someone and record the time"
 inputs:
-  who-to-greet: # id of input
-    description: "Who to greet"
+  greetings: # id of input
+    description: "Whom to greet"
     required: true
     default: "World"
   mode:
@@ -17,7 +17,7 @@ runs:
   using: "docker"
   image: "../../Dockerfile"
   args:
-    - ${{ inputs.who-to-greet }}
+    - ${{ inputs.greetings }}
     - ${{ inputs.mode }}
     - ${{ inputs.APP_DB_HOST }}
     - ${{ inputs.APP_DB_PORT }}
