--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -16,7 +16,7 @@ outputs:
 runs:
   using: "docker"
   image: "../../Dockerfile"
-  args:
+  build-args:
     - ${{ inputs.greetings }}
     - ${{ inputs.mode }}
     - ${{ inputs.APP_DB_HOST }}
