--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -67,20 +67,6 @@ jobs:
           sudo curl -fsSL -o /usr/local/bin/dbmate https://github.com/amacneil/dbmate/releases/latest/download/dbmate-linux-amd64
           sudo chmod +x /usr/local/bin/dbmate
 
-      # # # Auth with the GCloud Service Key
-      # # - id: "auth"
-      # #   uses: "google-github-actions/auth@v2"
-      # #   with:
-      # #     credentials_json: "${{ secrets.GCLOUD_SERVICE_KEY }}"
-
-      # # Start GCloud SQL Proxy, and test. Note, APP_DB_HOST is in effect localhost:5432 here, as we are running the proxy to instance ${{ env.PROJECT_ID }}:${{ vars.REGION }}:${{ vars.CLOUD_SQL_INSTANCE }}
-      # - name: Google Cloud SQL Proxy
-      #   run: |-
-      #     docker run -d --net host --name gce-cloudsql-proxy --restart on-failure --expose 5432 gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.7.0 --run-connection-test -t ${{steps.auth.outputs.access_token}} ${{ vars.PROJECT_ID }}:${{ vars.REGION }}:${{ vars.CLOUD_SQL_INSTANCE }}
-      #     docker ps
-      #     sleep 5
-      #     PGPASSWORD=${{ secrets.APP_DB_PASSWORD }} psql "host=localhost port=5432 dbname=${{ vars.APP_DB_NAME }} user=${{ vars.APP_DB_USERNAME }} sslmode=disable" -c 'select current_database()'
-
       # Setup GCloud
       - name: Configure GCloud
         env:
@@ -129,7 +115,8 @@ jobs:
         run: |
           docker build -t ${{ env.GCR_NAME }} .
 
-      - name: Container Test against postgres:6432
+      # Using internal docker networking, the test database is isolated on postgres:5432
+      - name: Container Test against postgres:5432
         uses: ./.github/actions
         id: container
         with:
