Add Tagging Permissions

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
 
     # Permissions, for Google Auth
     permissions:
-      contents: "read"
+      contents: "write"
       id-token: "write"
 
     # Service containers to run with build job
