Added Terraform for GCloud deployment.

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ SEMAPHORECI_API_TAKEN=duWE4Hs9EV4a9y9xeoha
 # APP_DB_USERNAME=postgres
 # APP_DB_PASSWORD=In!ferno666
 
-# Cloud SQL Parameters - duplicated in deploy.sh for now
+# Cloud SQL Parameters - duplicated in deploy.sh, and terra/defaults.tfvars for now
 # APP_DB_HOST=/cloudsql/414115:europe-west2:golang-psql
 # INSTANCE_CONNECTION_NAME=gmcd-414115:europe-west2:golang-psql
 APP_DB_HOST=35.242.149.106
