--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,24 @@
 tmp/
 .secrets
 
+###################################
+## Terraform
+###################################
+
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
+
+###################################
+## Golang and Friends
+###################################
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
